working on timer, controller

--- a/mobile/IotMobileController/IotMobileController.csproj
+++ b/mobile/IotMobileController/IotMobileController.csproj
@@ -72,6 +72,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="SocketIOClient" Version="3.0.8" />
 		<PackageReference Include="Syncfusion.Maui.Charts" Version="21.1.41" />
 		<PackageReference Include="System.Net.WebSockets.Client" Version="4.3.2" />
 	</ItemGroup>
